ytt/ingress.yaml
#@ load("@ytt:data", "data")
#@ load("helpers.star","app","config","secret","env")
#@ load("helpers.lib.yml", "labels")

#@ def host(container):
#@   return "Host(`{}.dev.pet-cluster.demo`)".format(container.name)
#@ end

#@ for/end container in data.values.containers:
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: #@ container.name+"-ingress"
  labels: #@ labels(container)    
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: #@ host(container)
    kind: Rule
    services:
    #@ for/end port in container.ports:
    - name: #@ container.name+"-service"
      port: #@ port.containerPort
